--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
 
     <!--This is the Footer with Logo and Slogan -->
     <footer class="footer-container">
-        <div class="holder container">
+        <div class="div-footera">
                 <a class="logo" href="index.html">WEB<span class="logo-white">STUDIO</span></a>
             <p class="footer-description">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
             </p>
         </div>
-        <div class="holder container">
+        <div class="div-footerb no-top-padding">
             <h3 class="footer-social">Social Media</h3>
             <ul class="social list">
                 <li class="item">
