--- a/portfolio.html
+++ b/portfolio.html
@@ -140,14 +140,47 @@
     </main>
 
       <!--This is the Footer with Logo and Slogan -->
-      <footer class="footer-container">
-        <div class="holder container">
+    <footer class="footer-container">
+        <div class="div-footera">
                 <a class="logo" href="index.html">WEB<span class="logo-white">STUDIO</span></a>
             <p class="footer-description">
-              Increase the flow of customers and sales for your business with digital
-              marketing & growth solutions.
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
             </p>
         </div>
-      </footer>
+        <div class="div-footerb no-top-padding">
+            <h3 class="footer-social">Social Media</h3>
+            <ul class="social list">
+                <li class="item">
+                    <a  class="link" href="https://www.instagram.com/" target="_blank">
+                        <svg class="icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#instagram"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="item">
+                    <a  class="link" href="https://twitter.com/" target="_blank">
+                        <svg class="icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#twitter"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="item">
+                    <a  class="link" href="https://www.facebook.com/" target="_blank">
+                        <svg class="icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#facebook"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="item">
+                    <a  class="link" href="https://www.linkedin.com/" target="_blank">
+                        <svg class="icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#linkedin"/>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
   </body>
 </html>
