--- a/portfolio.html
+++ b/portfolio.html
@@ -140,15 +140,15 @@
     </main>
 
       <!--This is the Footer with Logo and Slogan -->
-    <footer class="footer-container">
-        <div class="div-footera">
+      <footer class="footer-container">
+        <div class="div-footera foot">
                 <a class="logo" href="index.html">WEB<span class="logo-white">STUDIO</span></a>
             <p class="footer-description">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
             </p>
         </div>
-        <div class="div-footerb no-top-padding">
+        <div class="div-footerb foot"> 
             <h3 class="footer-social">Social Media</h3>
             <ul class="social list">
                 <li class="item">
@@ -181,6 +181,7 @@
                 </li>
             </ul>
         </div>
-    </footer>
+      </footer>
+      
   </body>
 </html>
